:ambulance: Correct folder structure

--- a/2 - Développer la partie Front-End/CSS/Jarditou/tableau.html
+++ b/2 - Développer la partie Front-End/CSS/Jarditou/tableau.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="assets/css/materialize.min.css" />
     <link rel="stylesheet" href="assets/css/animate.css" />
     <link rel="stylesheet" href="assets/css/index.css" />
-    <title>Jarditou - Accueil</title>
+    <title>Jarditou - Tableau</title>
   </head>
   <body>
     <div class="container center-align">
@@ -32,8 +32,8 @@
             ><i class="material-icons">menu</i></a
           >
           <ul class="right hide-on-med-and-down">
-            <li class="active"><a href="index.html">Accueil</a></li>
-            <li><a href="tableau.html">Tableau</a></li>
+            <li><a href="index.html">Accueil</a></li>
+            <li class="active"><a href="tableau.html">Tableau</a></li>
             <li><a href="formulaire.html">Formulaire</a></li>
           </ul>
         </div>
@@ -41,8 +41,8 @@
     </nav>
 
     <ul class="sidenav" id="mobile-demo">
-      <li class="active"><a href="index.html">Accueil</a></li>
-      <li><a href="tableau.html">Tableau</a></li>
+      <li><a href="index.html">Accueil</a></li>
+      <li class="active"><a href="tableau.html">Tableau</a></li>
       <li><a href="formulaire.html">Formulaire</a></li>
       <div class="divider"></div>
       <li><a href="#!">Mentions légales</a></li>
