--- a/2 - Développer la partie Front-End/CSS/Jarditou/tableau.html
+++ b/2 - Développer la partie Front-End/CSS/Jarditou/tableau.html
@@ -58,44 +58,111 @@
       width="100%"
     />
 
-    <section class="section">
-      <div class="row">
-        <div class="col s12 m9">
-          <h4>Accueil</h4>
-          <h5>L'entreprise</h5>
-          <p>
-            Notre entreprise familiale met tout son savoir-faire à votre
-            disposition dans le domaine du jardin et du paysagisme.
-          </p>
-          <p>
-            Créée il y a 70 ans, notre entreprise vend fleurs, arbustes,
-            matériel à main et motorisés.
-          </p>
-          <p>
-            Implantés à Amiens, nous intervenons dans tout le département de la
-            Somme : Albert, Doullens, Péronne, Abbeville, Corbie.
-          </p>
-          <h5>Qualité</h5>
-          <p>
-            Notre entreprise familiale met tout son savoir-faire à votre
-            disposition dans le domaine du jardin et du paysagisme.
-          </p>
-          <p>
-            Vous serez séduit par notre expertise, nos compétences et notre
-            sérieux.
-          </p>
-          <h5>Devis gratuit</h5>
-          <p>
-            Vous pouvez bien sûr contacter pour de plus amples informations ou
-            pour une demande d’intervention. Vous souhaitez un devis ? Nous vous
-            le réalisons gratuitement.
-          </p>
-        </div>
+    <section class="section container">
+      <table class="animated jello centered responsive-table highlight">
+        <thead>
+          <tr>
+            <th>Photo</th>
+            <th>ID</th>
+            <th>Catégorie</th>
+            <th>Libellé</th>
+            <th>Prix</th>
+            <th>Couleur</th>
+          </tr>
+        </thead>
 
-        <div class="col s3 hide-on-med-and-down">
-          <p class="flow-text">Col droite</p>
-        </div>
-      </div>
+        <tbody>
+          <tr>
+            <td>
+              <img
+                class="responsive-img"
+                src="assets/img/tableau/7.jpg"
+                alt="Barbecue Aramis"
+                title="Barbecue Aramis"
+                width="100"
+                height="100"
+              />
+            </td>
+            <td>7</td>
+            <td>Barbecues</td>
+            <td><a href="#!">Aramis</a></td>
+            <td>110.00€</td>
+            <td>Brun</td>
+          </tr>
+
+          <tr>
+            <td>
+              <img
+                class="responsive-img"
+                src="assets/img/tableau/7.jpg"
+                alt="Barbecue Athos"
+                title="Barbecue Athos"
+                width="100"
+                height="100"
+              />
+            </td>
+            <td>8</td>
+            <td>Barbecues</td>
+            <td><a href="#!">Athos</a></td>
+            <td>249.99€</td>
+            <td>Noir</td>
+          </tr>
+
+          <tr>
+            <td>
+              <img
+                class="responsive-img"
+                src="assets/img/tableau/11.jpg"
+                alt="Barbecue Clatronic"
+                title="Barbecue Clatronic"
+                width="100"
+                height="100"
+              />
+            </td>
+            <td>11</td>
+            <td>Barbecues</td>
+            <td><a href="#!">Clatronic</a></td>
+            <td>135.90€</td>
+            <td>Chrome</td>
+          </tr>
+
+          <tr>
+            <td>
+              <img
+                class="responsive-img"
+                src="assets/img/tableau/12.jpg"
+                alt="Barbecue Camping"
+                title="Barbecue Camping"
+                width="100"
+                height="100"
+              />
+            </td>
+            <td>12</td>
+            <td>Barbecues</td>
+            <td><a href="#!">Camping</a></td>
+            <td>88.00€</td>
+            <td>Noir</td>
+          </tr>
+
+          <tr>
+            <td>
+              <img
+                class="responsive-img"
+                src="assets/img/tableau/13.jpg"
+                alt="Brouette Green"
+                title="Brouette Green"
+                width="100"
+                height="100"
+              />
+            </td>
+            <td>13</td>
+            <td>Brouettes</td>
+            <td><a href="#!">Green</a></td>
+            <td>49.00€</td>
+            <td>Verte</td>
+          </tr>
+        </tbody>
+      </table>
     </section>
 
     <footer class="animated bounceInRight hide-on-med-and-down">
