--- a/2 - Développer la partie Front-End/Evaluation/formulaire.html
+++ b/2 - Développer la partie Front-End/Evaluation/formulaire.html
@@ -202,9 +202,9 @@
 
           <button
             class="btn waves-effect waves-light"
-            id="submit"
+            id="btnSubmit"
             type="submit"
-            name="submit"
+            name="btnSubmit"
           >
             Envoyer
             <i class="material-icons right">send</i>
