--- a/2 - Développer la partie Front-End/Evaluation/index.html
+++ b/2 - Développer la partie Front-End/Evaluation/index.html
@@ -14,21 +14,27 @@
   </head>
 
   <body>
-    <div class="container center-align">
-      <img
-        class="responsive-img"
-        src="assets/img/jarditou_logo.png"
-        alt="Logo Jarditou"
-        title="Logo jarditou"
-        width="400"
-      />
-    </div>
+    <header role="banner">
+      <div class="container center-align">
+        <img
+          alt="Logo Jarditou"
+          class="responsive-img"
+          id="logo"
+          src="assets/img/jarditou_logo.png"
+          title="Logo jarditou"
+        />
+      </div>
+    </header>
 
-    <nav class="teal lighten-1 z-depth-2">
+    <nav aria-label="Barre de navigation" role="navigation">
       <div class="nav-wrapper">
         <div class="container">
           <a href="index.html" class="brand-logo">Jarditou</a>
-          <a href="#" data-target="mobile-demo" class="sidenav-trigger"
+          <a
+            aria-haspopup
+            href="#"
+            data-target="mobile-demo"
+            class="sidenav-trigger"
             ><i class="material-icons">menu</i></a
           >
           <ul class="right hide-on-med-and-down">
@@ -40,66 +46,91 @@
       </div>
     </nav>
 
-    <ul class="sidenav" id="mobile-demo">
-      <li class="active"><a href="index.html">Accueil</a></li>
-      <li><a href="tableau.html">Tableau</a></li>
-      <li><a href="formulaire.html">Formulaire</a></li>
-      <div class="divider"></div>
-      <li><a href="#!">Mentions légales</a></li>
-      <li><a href="#!">Horaires</a></li>
-      <li><a href="#!">Plan du site</a></li>
-    </ul>
+    <div aria-labelledby="mobile-demo" role="navigation">
+      <ul class="sidenav" id="mobile-demo">
+        <li class="active" role="listitem">
+          <a href="index.html">Accueil</a>
+        </li>
+        <li><a href="tableau.html">Tableau</a></li>
+        <li><a href="formulaire.html">Formulaire</a></li>
+        <li class="divider"></li>
+        <li><a href="#!">Mentions légales</a></li>
+        <li><a href="#!">Horaires</a></li>
+        <li><a href="#!">Plan du site</a></li>
+      </ul>
+    </div>
 
-    <img
-      src="assets/img/promotion.jpg"
-      alt="Promotions lames de terrasse"
-      title="Promotions lames de terrasse"
-      class="responsive-img materialboxed"
-      width="100%"
-    />
+    <div role="region">
+      <img
+        alt="Promotions lames de terrasse"
+        class="responsive-img materialboxed"
+        id="promotion"
+        src="assets/img/promotion.jpg"
+        title="Promotions lames de terrasse"
+      />
+    </div>
 
-    <section class="section">
-      <div class="row">
-        <div class="col s12 m9">
-          <h4>Accueil</h4>
-          <h5>L'entreprise</h5>
-          <p>
-            Notre entreprise familiale met tout son savoir-faire à votre
-            disposition dans le domaine du jardin et du paysagisme.
-          </p>
-          <p>
-            Créée il y a 70 ans, notre entreprise vend fleurs, arbustes,
-            matériel à main et motorisés.
-          </p>
-          <p>
-            Implantés à Amiens, nous intervenons dans tout le département de la
-            Somme : Albert, Doullens, Péronne, Abbeville, Corbie.
-          </p>
-          <h5>Qualité</h5>
-          <p>
-            Notre entreprise familiale met tout son savoir-faire à votre
-            disposition dans le domaine du jardin et du paysagisme.
-          </p>
-          <p>
-            Vous serez séduit par notre expertise, nos compétences et notre
-            sérieux.
-          </p>
-          <h5>Devis gratuit</h5>
-          <p>
-            Vous pouvez bien sûr contacter pour de plus amples informations ou
-            pour une demande d’intervention. Vous souhaitez un devis ? Nous vous
-            le réalisons gratuitement.
-          </p>
-        </div>
+    <div class="row">
+      <main aria-labelledby="title" class="col s12 m9" role="main">
+        <h1 id="title">Accueil</h1>
 
-        <div class="col s3 hide-on-med-and-down">
-          <p class="flow-text">Col droite</p>
-        </div>
-      </div>
-    </section>
+        <section>
+          <h2>L'entreprise</h2>
 
-    <footer class="hide-on-med-and-down">
-      <nav class="teal lighten-1 z-depth-2">
+          <article role="article">
+            <p>
+              Notre entreprise familiale met tout son savoir-faire à votre
+              disposition dans le domaine du jardin et du paysagisme.
+            </p>
+            <p>
+              Créée il y a 70 ans, notre entreprise vend fleurs, arbustes,
+              matériel à main et motorisés.
+            </p>
+            <p>
+              Implantés à Amiens, nous intervenons dans tout le département de
+              la Somme : Albert, Doullens, Péronne, Abbeville, Corbie.
+            </p>
+          </article>
+        </section>
+
+        <section>
+          <h2>Qualité</h2>
+          <article role="article">
+            <p>
+              Notre entreprise familiale met tout son savoir-faire à votre
+              disposition dans le domaine du jardin et du paysagisme.
+            </p>
+            <p>
+              Vous serez séduit par notre expertise, nos compétences et notre
+              sérieux.
+            </p>
+          </article>
+        </section>
+
+        <section>
+          <h2>Devis gratuit</h2>
+
+          <article role="article">
+            <p>
+              Vous pouvez bien sûr contacter pour de plus amples informations ou
+              pour une demande d’intervention. Vous souhaitez un devis ? Nous
+              vous le réalisons gratuitement.
+            </p>
+          </article>
+        </section>
+      </main>
+
+      <aside role="complementary">
+        <section class="col s3 hide-on-med-and-down">
+          <article role="article">
+            <p class="flow-text">Col droite</p>
+          </article>
+        </section>
+      </aside>
+    </div>
+
+    <footer class="hide-on-med-and-down" role="contentinfo">
+      <nav aria-label="Navigation footer" role="navigation">
         <div class="nav-wrapper">
           <div class="container">
             <ul class="space-evenly">
@@ -111,8 +142,8 @@
         </div>
       </nav>
     </footer>
-  </body>
 
-  <script src="assets/js/vendors/materialize.min.js"></script>
-  <script src="assets/js/index.js"></script>
+    <script src="assets/js/vendors/materialize.min.js"></script>
+    <script src="assets/js/index.js"></script>
+  </body>
 </html>
