--- a/2 - Développer la partie Front-End/Evaluation/tableau.html
+++ b/2 - Développer la partie Front-End/Evaluation/tableau.html
@@ -14,21 +14,27 @@
   </head>
 
   <body>
-    <div class="container center-align">
-      <img
-        class="responsive-img"
-        src="assets/img/jarditou_logo.png"
-        alt="Logo Jarditou"
-        title="Logo jarditou"
-        width="400"
-      />
-    </div>
+    <header role="banner">
+      <div class="container center-align">
+        <img
+          alt="Logo Jarditou"
+          class="responsive-img"
+          id="logo"
+          src="assets/img/jarditou_logo.png"
+          title="Logo jarditou"
+        />
+      </div>
+    </header>
 
-    <nav class="teal lighten-1 z-depth-2">
+    <nav aria-label="Barre de navigation" role="navigation">
       <div class="nav-wrapper">
         <div class="container">
-          <a href="index.html" class="brand-logo">Jarditou</a>
-          <a href="#" data-target="mobile-demo" class="sidenav-trigger"
+          <a class="brand-logo" href="index.html">Jarditou</a>
+          <a
+            aria-haspopup
+            class="sidenav-trigger"
+            data-target="mobile-nav"
+            href="#"
             ><i class="material-icons">menu</i></a
           >
           <ul class="right hide-on-med-and-down">
@@ -40,133 +46,141 @@
       </div>
     </nav>
 
-    <ul class="sidenav" id="mobile-demo">
-      <li><a href="index.html">Accueil</a></li>
-      <li class="active"><a href="tableau.html">Tableau</a></li>
-      <li><a href="formulaire.html">Formulaire</a></li>
-      <div class="divider"></div>
-      <li><a href="#!">Mentions légales</a></li>
-      <li><a href="#!">Horaires</a></li>
-      <li><a href="#!">Plan du site</a></li>
-    </ul>
+    <div aria-labelledby="mobile-nav" role="navigation">
+      <ul class="sidenav" id="mobile-nav">
+        <li><a href="index.html">Accueil</a></li>
+        <li class="active"><a href="tableau.html">Tableau</a></li>
+        <li><a href="formulaire.html">Formulaire</a></li>
+        <li class="divider"></li>
+        <li><a href="#!">Mentions légales</a></li>
+        <li><a href="#!">Horaires</a></li>
+        <li><a href="#!">Plan du site</a></li>
+      </ul>
+    </div>
 
-    <img
-      src="assets/img/promotion.jpg"
-      alt="Promotions lames de terrasse"
-      title="Promotions lames de terrasse"
-      class="responsive-img materialboxed"
-      width="100%"
-    />
+    <div role="region">
+      <img
+        alt="Promotions lames de terrasse"
+        class="responsive-img materialboxed"
+        id="promotion"
+        src="assets/img/promotion.jpg"
+        title="Promotions lames de terrasse"
+      />
+    </div>
 
-    <section class="section container">
-      <table class="animated jello centered responsive-table highlight">
-        <thead>
-          <tr>
-            <th>Photo</th>
-            <th>ID</th>
-            <th>Catégorie</th>
-            <th>Libellé</th>
-            <th>Prix</th>
-            <th>Couleur</th>
-          </tr>
-        </thead>
+    <main class="section">
+      <div class="container">
+        <h1 class="center-align">Nos Produits</h1>
 
-        <tbody>
-          <tr>
-            <td>
-              <img
-                class="responsive-img"
-                src="assets/img/tableau/7.jpg"
-                alt="Barbecue Aramis"
-                title="Barbecue Aramis"
-                width="100"
-                height="100"
-              />
-            </td>
-            <td>7</td>
-            <td>Barbecues</td>
-            <td><a href="#!">Aramis</a></td>
-            <td>110.00€</td>
-            <td>Brun</td>
-          </tr>
+        <table class="centered responsive-table highlight">
+          <thead>
+            <tr>
+              <th>Photo</th>
+              <th>ID</th>
+              <th>Catégorie</th>
+              <th>Libellé</th>
+              <th>Prix</th>
+              <th>Couleur</th>
+            </tr>
+          </thead>
 
-          <tr>
-            <td>
-              <img
-                class="responsive-img"
-                src="assets/img/tableau/7.jpg"
-                alt="Barbecue Athos"
-                title="Barbecue Athos"
-                width="100"
-                height="100"
-              />
-            </td>
-            <td>8</td>
-            <td>Barbecues</td>
-            <td><a href="#!">Athos</a></td>
-            <td>249.99€</td>
-            <td>Noir</td>
-          </tr>
+          <tbody>
+            <tr>
+              <td>
+                <img
+                  class="responsive-img"
+                  src="assets/img/tableau/7.jpg"
+                  alt="Barbecue Aramis"
+                  title="Barbecue Aramis"
+                  width="100"
+                  height="100"
+                />
+              </td>
+              <td>7</td>
+              <td>Barbecues</td>
+              <td><a href="#!">Aramis</a></td>
+              <td>110.00€</td>
+              <td>Brun</td>
+            </tr>
 
-          <tr>
-            <td>
-              <img
-                class="responsive-img"
-                src="assets/img/tableau/11.jpg"
-                alt="Barbecue Clatronic"
-                title="Barbecue Clatronic"
-                width="100"
-                height="100"
-              />
-            </td>
-            <td>11</td>
-            <td>Barbecues</td>
-            <td><a href="#!">Clatronic</a></td>
-            <td>135.90€</td>
-            <td>Chrome</td>
-          </tr>
+            <tr>
+              <td>
+                <img
+                  class="responsive-img"
+                  src="assets/img/tableau/7.jpg"
+                  alt="Barbecue Athos"
+                  title="Barbecue Athos"
+                  width="100"
+                  height="100"
+                />
+              </td>
+              <td>8</td>
+              <td>Barbecues</td>
+              <td><a href="#!">Athos</a></td>
+              <td>249.99€</td>
+              <td>Noir</td>
+            </tr>
 
-          <tr>
-            <td>
-              <img
-                class="responsive-img"
-                src="assets/img/tableau/12.jpg"
-                alt="Barbecue Camping"
-                title="Barbecue Camping"
-                width="100"
-                height="100"
-              />
-            </td>
-            <td>12</td>
-            <td>Barbecues</td>
-            <td><a href="#!">Camping</a></td>
-            <td>88.00€</td>
-            <td>Noir</td>
-          </tr>
+            <tr>
+              <td>
+                <img
+                  class="responsive-img"
+                  src="assets/img/tableau/11.jpg"
+                  alt="Barbecue Clatronic"
+                  title="Barbecue Clatronic"
+                  width="100"
+                  height="100"
+                />
+              </td>
+              <td>11</td>
+              <td>Barbecues</td>
+              <td><a href="#!">Clatronic</a></td>
+              <td>135.90€</td>
+              <td>Chrome</td>
+            </tr>
 
-          <tr>
-            <td>
-              <img
-                class="responsive-img"
-                src="assets/img/tableau/13.jpg"
-                alt="Brouette Green"
-                title="Brouette Green"
-                width="100"
-                height="100"
-              />
-            </td>
-            <td>13</td>
-            <td>Brouettes</td>
-            <td><a href="#!">Green</a></td>
-            <td>49.00€</td>
-            <td>Verte</td>
-          </tr>
-        </tbody>
-      </table>
-    </section>
+            <tr>
+              <td>
+                <img
+                  class="responsive-img"
+                  src="assets/img/tableau/12.jpg"
+                  alt="Barbecue Camping"
+                  title="Barbecue Camping"
+                  width="100"
+                  height="100"
+                />
+              </td>
+              <td>12</td>
+              <td>Barbecues</td>
+              <td><a href="#!">Camping</a></td>
+              <td>88.00€</td>
+              <td>Noir</td>
+            </tr>
+
+            <tr>
+              <td>
+                <img
+                  class="responsive-img"
+                  src="assets/img/tableau/13.jpg"
+                  alt="Brouette Green"
+                  title="Brouette Green"
+                  width="100"
+                  height="100"
+                />
+              </td>
+              <td>13</td>
+              <td>Brouettes</td>
+              <td><a href="#!">Green</a></td>
+              <td>49.00€</td>
+              <td>Verte</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </main>
 
     <footer class="hide-on-med-and-down">
-      <nav class="teal lighten-1 z-depth-2">
+      <nav aria-label="Navigation footer" role="navigation">
         <div class="nav-wrapper">
           <div class="container">
             <ul class="space-evenly">
@@ -178,8 +192,8 @@
         </div>
       </nav>
     </footer>
-  </body>
 
-  <script src="assets/js/vendors/materialize.min.js"></script>
-  <script src="assets/js/index.js"></script>
+    <script src="assets/js/vendors/materialize.min.js"></script>
+    <script src="assets/js/index.js"></script>
+  </body>
 </html>
