:sparkles: Upgrade CSS

--- a/2 - Développer la partie Front-End/Evaluation/formulaire.html
+++ b/2 - Développer la partie Front-End/Evaluation/formulaire.html
@@ -31,7 +31,7 @@
         <div class="container">
           <a class="brand-logo" href="index.html">Jarditou</a>
           <a
-            aria-haspopup
+            aria-haspopup="true"
             class="sidenav-trigger"
             data-target="mobile-nav"
             href="#"
