--- a/2 - Développer la partie Front-End/Evaluation/index.html
+++ b/2 - Développer la partie Front-End/Evaluation/index.html
@@ -31,12 +31,11 @@
         <div class="container">
           <a class="brand-logo" href="index.html">Jarditou</a>
           <a
-            aria-haspopup
+            aria-haspopup="true"
             class="sidenav-trigger"
             data-target="mobile-nav"
             href="#"
-            ><i class="material-icons">menu</i></a
-          >
+            ><i class="material-icons">menu</i></a>
           <ul class="right hide-on-med-and-down">
             <li class="active"><a href="index.html">Accueil</a></li>
             <li><a href="tableau.html">Tableau</a></li>
