--- a/2 - Développer la partie Front-End/Evaluation/tableau.html
+++ b/2 - Développer la partie Front-End/Evaluation/tableau.html
@@ -31,7 +31,7 @@
         <div class="container">
           <a class="brand-logo" href="index.html">Jarditou</a>
           <a
-            aria-haspopup
+            aria-haspopup="true"
             class="sidenav-trigger"
             data-target="mobile-nav"
             href="#"
@@ -92,8 +92,6 @@
                   src="assets/img/tableau/7.jpg"
                   alt="Barbecue Aramis"
                   title="Barbecue Aramis"
-                  width="100"
-                  height="100"
                 />
               </td>
               <td>7</td>
@@ -107,11 +105,9 @@
               <td>
                 <img
                   class="responsive-img"
-                  src="assets/img/tableau/7.jpg"
+                  src="assets/img/tableau/8.jpg"
                   alt="Barbecue Athos"
                   title="Barbecue Athos"
-                  width="100"
-                  height="100"
                 />
               </td>
               <td>8</td>
@@ -128,8 +124,6 @@
                   src="assets/img/tableau/11.jpg"
                   alt="Barbecue Clatronic"
                   title="Barbecue Clatronic"
-                  width="100"
-                  height="100"
                 />
               </td>
               <td>11</td>
@@ -146,8 +140,6 @@
                   src="assets/img/tableau/12.jpg"
                   alt="Barbecue Camping"
                   title="Barbecue Camping"
-                  width="100"
-                  height="100"
                 />
               </td>
               <td>12</td>
@@ -164,8 +156,6 @@
                   src="assets/img/tableau/13.jpg"
                   alt="Brouette Green"
                   title="Brouette Green"
-                  width="100"
-                  height="100"
                 />
               </td>
               <td>13</td>
