:sparkles: Upgrade html

--- a/2 - Développer la partie Front-End/Evaluation/formulaire.html
+++ b/2 - Développer la partie Front-End/Evaluation/formulaire.html
@@ -52,9 +52,9 @@
         <li><a href="tableau.html">Tableau</a></li>
         <li class="active"><a href="formulaire.html">Formulaire</a></li>
         <li class="divider"></li>
-        <li><a href="#!">Mentions légales</a></li>
-        <li><a href="#!">Horaires</a></li>
-        <li><a href="#!">Plan du site</a></li>
+        <li><a href="#">Mentions légales</a></li>
+        <li><a href="#">Horaires</a></li>
+        <li><a href="#">Plan du site</a></li>
       </ul>
     </div>
 
@@ -220,9 +220,9 @@
         <div class="nav-wrapper">
           <div class="container">
             <ul class="space-evenly">
-              <li><a href="#!">Mentions légales</a></li>
-              <li><a href="#!">Horaires</a></li>
-              <li><a href="#!">Plan du site</a></li>
+              <li><a href="#">Mentions légales</a></li>
+              <li><a href="#">Horaires</a></li>
+              <li><a href="#">Plan du site</a></li>
             </ul>
           </div>
         </div>
