--- a/2 - Développer la partie Front-End/Evaluation/index.html
+++ b/2 - Développer la partie Front-End/Evaluation/index.html
@@ -51,9 +51,9 @@
         <li><a href="tableau.html">Tableau</a></li>
         <li><a href="formulaire.html">Formulaire</a></li>
         <li class="divider"></li>
-        <li><a href="#!">Mentions légales</a></li>
-        <li><a href="#!">Horaires</a></li>
-        <li><a href="#!">Plan du site</a></li>
+        <li><a href="#">Mentions légales</a></li>
+        <li><a href="#">Horaires</a></li>
+        <li><a href="#">Plan du site</a></li>
       </ul>
     </div>
 
@@ -131,9 +131,9 @@
         <div class="nav-wrapper">
           <div class="container">
             <ul class="space-evenly">
-              <li><a href="#!">Mentions légales</a></li>
-              <li><a href="#!">Horaires</a></li>
-              <li><a href="#!">Plan du site</a></li>
+              <li><a href="#">Mentions légales</a></li>
+              <li><a href="#">Horaires</a></li>
+              <li><a href="#">Plan du site</a></li>
             </ul>
           </div>
         </div>
