--- a/2 - Développer la partie Front-End/Evaluation/tableau.html
+++ b/2 - Développer la partie Front-End/Evaluation/tableau.html
@@ -52,9 +52,9 @@
         <li class="active"><a href="tableau.html">Tableau</a></li>
         <li><a href="formulaire.html">Formulaire</a></li>
         <li class="divider"></li>
-        <li><a href="#!">Mentions légales</a></li>
-        <li><a href="#!">Horaires</a></li>
-        <li><a href="#!">Plan du site</a></li>
+        <li><a href="#">Mentions légales</a></li>
+        <li><a href="#">Horaires</a></li>
+        <li><a href="#">Plan du site</a></li>
       </ul>
     </div>
 
@@ -96,7 +96,7 @@
               </td>
               <td>7</td>
               <td>Barbecues</td>
-              <td><a href="#!">Aramis</a></td>
+              <td><a href="#">Aramis</a></td>
               <td>110.00€</td>
               <td>Brun</td>
             </tr>
@@ -112,7 +112,7 @@
               </td>
               <td>8</td>
               <td>Barbecues</td>
-              <td><a href="#!">Athos</a></td>
+              <td><a href="#">Athos</a></td>
               <td>249.99€</td>
               <td>Noir</td>
             </tr>
@@ -128,7 +128,7 @@
               </td>
               <td>11</td>
               <td>Barbecues</td>
-              <td><a href="#!">Clatronic</a></td>
+              <td><a href="#">Clatronic</a></td>
               <td>135.90€</td>
               <td>Chrome</td>
             </tr>
@@ -144,7 +144,7 @@
               </td>
               <td>12</td>
               <td>Barbecues</td>
-              <td><a href="#!">Camping</a></td>
+              <td><a href="#">Camping</a></td>
               <td>88.00€</td>
               <td>Noir</td>
             </tr>
@@ -160,7 +160,7 @@
               </td>
               <td>13</td>
               <td>Brouettes</td>
-              <td><a href="#!">Green</a></td>
+              <td><a href="#">Green</a></td>
               <td>49.00€</td>
               <td>Verte</td>
             </tr>
@@ -174,9 +174,9 @@
         <div class="nav-wrapper">
           <div class="container">
             <ul class="space-evenly">
-              <li><a href="#!">Mentions légales</a></li>
-              <li><a href="#!">Horaires</a></li>
-              <li><a href="#!">Plan du site</a></li>
+              <li><a href="#">Mentions légales</a></li>
+              <li><a href="#">Horaires</a></li>
+              <li><a href="#">Plan du site</a></li>
             </ul>
           </div>
         </div>
