:sparkles: Add unfinshed code

--- a/3 - Développer la partie Back-End/AJAX/TheMovieDB/index.html
+++ b/3 - Développer la partie Back-End/AJAX/TheMovieDB/index.html
@@ -11,18 +11,7 @@
     <h1>Exercice 1</h1>
     <h3>Créez un fichier listeproduit.php qui permet d'afficher la liste des disques de la base record.</h3>
 
-    <button id="showDiscs">Afficher les disques</button>
-    <div id="div1"></div>
-</section>
-
-<hr>
-
-<section>
-    <h1>Exercice 2</h1>
-    <h3>Reproduisez l'exemple ci-dessus en créant le fichier exemple1.html</h3>
-
-    <select id="regionsSelect"></select>
-    <select id="departementsSelect"></select>
+    <input id="movieSearch" name="movieSearch" type="search">
 </section>
 
 </body>
